# StonksAPI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  justfile  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.code.yml  justfile
.github/workflows/: ci.yml
app/: main.py
app/exceptions/: exceptions.py  responses.py
app/health/: responses.py  router.py
app/tickers/: configuration.py  exceptions.py  responses.py  router.py  validators.py
app/tickers/controllers/: get_close.py  get_closes.py  get_info.py
app/tickers/services/: yahoo_finances.py
scripts/: copy_api_keys.py  make_api_key.py
