[tool.poetry]
name = "stonksapi"
version = "0.1.0"
description = ""
authors = ["Kamaal Farah <kamaal.f1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
uvicorn = { extras = ["standard"], version = "^0.25.0" }
yfinance = "^0.2.33"
pandas = "^2.1.4"
kamaalpy = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.9"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
